--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,3 @@
-
 <div class="login-page">
   <div class="login-card">
     <div class="login-wrap">
@@ -24,7 +23,7 @@
           <p class="signup-txt">- or -</p>
         </div>
 
-        <div class="g-signin2" id= data-onsuccess="onSignIn" align="center">
+        <div class="g-signin2"  data-onsuccess="onSignIn" align="center">
           <meta name="google-signin-client_id" content=
           "592878734224-1ri6pfkmfslqvnv82ks1bs7n7scaljtn.apps.googleusercontent.com">
           {{!-- <button type="button" class="login-btn-google">Log In with Google</button> --}}
