--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,13 +15,13 @@
 				<a href="/">Easy Schedule Logo</a>
 			</h1>
 			<nav>
-				<!-- {{#if loggedIn}} -->
+				{{#if loggedIn}} 
 				<a href="/api/schedule">Scheduling</a>
 				<button id="logout" class="btn-no-style">Log Out</button>
-				<!-- {{else}} -->
+				 {{else}} 
 				<a href="/api/login">Login</a>
 				<a href="/api/signup">Sign Up</a>
-				<!-- {{/if}} -->
+				 {{/if}} 
 		
 			</nav>    
 		</header>
