--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -25,7 +25,7 @@
               </p>
               </div>
               </div> --}}
-              
+              <h2>Need to set Appointment click the scheduling</h2>
 {{#if appts.length}}
 <section>
   <h2>Your Appointments</h2>
