--- a/views/scheduling.handlebars
+++ b/views/scheduling.handlebars
@@ -10,7 +10,7 @@
         </div>
 
         <div class="calendar-btn modal-btn">
-          <div id="myBtn">Choose Appointment</div>
+          <div id="myBtn">Create Appointment</div>
           <div id="myModal" class="modal">
             <div class="modal-content">
               <span class="close">&times;</span>
