--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -25,6 +25,7 @@
               </p>
               </div>
               </div> --}}
+              <h2> How are you felling {{username}}</h2>
               <h2>Need to set Appointment click the scheduling</h2>
 {{#if appts.length}}
 <section>
