--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -33,7 +33,7 @@
   <ol>
     {{#each appts as |appt|}}
     <li>
-      {{!-- <a {{appt.id}}" class="appt"> {{appt.Appointments_time}}:00</a> --}}
+      <a {{appt.id}}" class="appt"> {{appt.Appointments_time}}:00</a>
           <a {{appt.id}}" class="appt"> {{appt.Appointments_date}}</a>
            <a {{appt.id}}" class="appt"> {{appt.Appointments_day}}</a>
             <a {{appt.id}}" class="appt"> {{appt.Appointments_text}}</a>
